--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "guid_win"
-version = "0.1.0-alpha3"
+version = "0.1.0"
 description = "Windows GUID/CLSID/IID string and binary serialization"
 keywords = ["windows", "com", "win32"]
 categories = ["api-bindings", "os::windows-apis"]
@@ -15,7 +15,7 @@ default-target = "x86_64-pc-windows-msvc"
 guid_serde = ["serde", "serde_derive"]
 
 [dependencies]
-comedy = "0.1.0-alpha2"
+comedy = "0.1.0"
 winapi = { version = "0.3.6", features = ["combaseapi", "guiddef"] }
 
 serde = { version = "1.0.80", optional = true }
